get tweets dynamically

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script src="/scripts/composer-char-counter.js"></script>
+    <script src="/scripts/hover.js"></script>
+
 
   </head>
 
@@ -63,26 +65,8 @@
         </form>
       </section>
       
-      <article >
-
-        <header>
-          <p>some icon</p>
-          <p>@handle</p>
-        </header>
-
-        <p id="tweet-text">this is a quirky relatable tweet about something that happened at panera bread</p>
-        <hr class="solid">
-
-        <footer>
-          <p>2 hours ago</p>
-          <div id="icons">
-            <div class="icon"><i class="fa-solid fa-flag"></i></div>
-            <div class="icon"><i class="fa-solid fa-retweet"></i></div>
-            <div class="icon"><i class="fa-solid fa-heart"></i></div>
-          </div>
-        </footer>
-
-      </article>
+      <section id="tweet-container">
+      </section>
 
     </main>
   </body>
