create functions to render tweets to page

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,6 @@
     <script src="/scripts/composer-char-counter.js"></script>
     <script src="/scripts/hover.js"></script>
 
-
   </head>
 
   <body>
@@ -53,7 +52,7 @@
     <main class="container">
 
       <section class="new-tweet">
-        <form  method="POST" action="/tweets/">
+        <form id="tweet-input">
 
           <textarea id="humming" name="text" placeholder="What are you humming about?"></textarea>
       
