handle smartphone view

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
   </head>
 
   <body>
+    <a name="top"></a>
     <!-- Top nav bar (fixed) -->
     <nav>
       <span id="name">tweeter</span>
@@ -39,16 +40,16 @@
         <p><strong>Write</strong> a new tweet</p>
         <i class="fa-solid fa-angles-down fa-bounce"></i>
       </div>
-      <div id="smartphone"><i class="fa-solid fa-circle-plus fa-beat"></i></div>
+      <a id="smartphone" href="#top"><i class="fa-solid fa-circle-plus fa-beat"></i></a>
     </nav>
 
     <div id="content">
 
       <header id="current-user">
         <div>
-            <img src="/images/profile-hex.png"> 
+            <img src="/images/worker.png"> 
           <br>
-            <p><strong>Chronically</strong> Online</p>
+            <p><strong>Maurice</strong> Moss</p>
         </div>  
       </header>
 
