clean up code and add docs dir

--- a/public/index.html
+++ b/public/index.html
@@ -38,9 +38,9 @@
       <span id="name">tweeter</span>
       <div id="tweet-header">
         <p><strong>Write</strong> a new tweet</p>
-        <i class="fa-solid fa-angles-down fa-bounce"></i>
+        <a id="desktop" href="#top"><i class="fa-solid fa-circle-plus fa-bounce"></i></a>
       </div>
-      <a id="smartphone" href="#top"><i class="fa-solid fa-circle-plus fa-beat"></i></a>
+      <a id="smartphone" href="#top"><i class="fa-solid fa-circle-plus fa-bounce"></i></a>
     </nav>
 
     <div id="content">
@@ -49,7 +49,7 @@
         <div>
             <img src="/images/worker.png"> 
           <br>
-            <p><strong>Maurice</strong> Moss</p>
+            <p><strong>Maurice</strong>Moss</p>
         </div>  
       </header>
 
@@ -64,10 +64,10 @@
 
               <textarea id="humming" name="text" placeholder="What are you humming about?"></textarea>
           
-            <footer>
-              <button type="submit" id="send-tweet">Tweet</button>
-              <output name="counter" class="counter" for="humming">140</output>
-            </footer>
+              <footer>
+                <button type="submit" id="send-tweet">Tweet</button>
+                <output name="counter" class="counter" for="humming">140</output>
+              </footer>
 
             </form>
           </section>
